--- a/package.json
+++ b/package.json
@@ -9,11 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.3",
+    "@portabletext/react": "^2.0.1",
+    "@sanity/client": "^4.0.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.0.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "framer-motion": "^8.5.2",
     "next": "13.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-sanity": "^4.1.2",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.0",
+    "react-simple-icons": "^1.0.0-beta.5",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^5.15.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
+    "tailwind-scrollbar": "^2.1.0"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
