--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.3",
+    "eslint-config-next": "^13.2.1",
     "framer-motion": "^8.5.2",
-    "next": "13.1.3",
+    "next": "^13.2.1",
     "next-sanity": "^4.1.2",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-simple-icons": "^1.0.0-beta.5",
     "react-simple-typewriter": "^5.0.1",
